# MediaLearn

./: README.md
CLearn/: C学习.md
CLearn/code/: CMakeLists.txt  array_pointer.cpp  cplus_T.cpp  cplus_class.cpp  cplus_clazz_memory.cpp  cplus_constructer.cpp  cplus_friend.cpp  cplus_memery.cpp  cplus_namespace.cpp  cplus_operation.cpp  cplus_pointer_auto.cpp  cplus_thiz.cpp  cplus_virtual_func.cpp  main.cpp  pointer_array.cpp  struct_test.cpp
H264Learn/: 音视频H264编码.md
H264Learn/MediaCodec1/: settings.gradle
H264Learn/MediaCodec1/app/: build.gradle
H264Learn/MediaCodec1/app/src/main/: AndroidManifest.xml
H264Learn/MediaCodec1/app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml  activity_main4.xml  activity_main5.xml  activity_main6.xml
H264Learn/MediaCodec1/app/src/main/res/values/: strings.xml
H264Learn/MediaCodec1/gradle/wrapper/: gradle-wrapper.properties
H264Learn/RTMPLearn/: settings.gradle
H264Learn/RTMPLearn/app/: build.gradle
H264Learn/RTMPLearn/app/src/main/: AndroidManifest.xml
H264Learn/RTMPLearn/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
H264Learn/RTMPLearn/app/src/main/cpp/librtmp/: CMakeLists.txt
H264Learn/RTMPLearn/app/src/main/res/values/: strings.xml  themes.xml
H264Learn/RTMPLearn/app/src/main/res/values-night/: themes.xml
H264Learn/RTMPLearn/gradle/wrapper/: gradle-wrapper.properties
H264Learn/X264RTMPLearn/: settings.gradle
H264Learn/X264RTMPLearn/app/: build.gradle
H264Learn/X264RTMPLearn/app/src/main/: AndroidManifest.xml
H264Learn/X264RTMPLearn/app/src/main/cpp/: CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  android_log.h  native-lib.cpp
H264Learn/X264RTMPLearn/app/src/main/cpp/librtmp/: CMakeLists.txt
H264Learn/X264RTMPLearn/app/src/main/res/values/: strings.xml  themes.xml
H264Learn/X264RTMPLearn/app/src/main/res/values-night/: themes.xml
H264Learn/X264RTMPLearn/gradle/wrapper/: gradle-wrapper.properties
H264Learn/音视频H264编码.assets/: 63a67134328b43718fea2d6ef8fa1f83~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp
JNILearn/: JNI学习.md  settings.gradle
JNILearn/app/: build.gradle
JNILearn/app/src/main/: AndroidManifest.xml
JNILearn/app/src/main/cpp/: native-lib.cpp
JNILearn/app/src/main/java/com/jnilearn/: MainActivity.kt
JNILearn/app/src/main/res/values/: themes.xml
JNILearn/app/src/main/res/values-night/: themes.xml
JNILearn/gradle/wrapper/: gradle-wrapper.properties
(+40 files in other folders)
